samples/_failures_safe/1761648282_ee4217_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_26af950d.c: In function ‘main’:
./samples/SAFE/__tmp_26af950d.c:151:5: error: expected expression at end of input
  151 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_26af950d.c:151:5: error: expected declaration or statement at end of input
